@@ -1,7 +1,7 @@
-/*      $OpenBSD: strlcpy.c,v 1.15 2016/10/16 17:37:39 dtucker Exp $    */
+/*      $OpenBSD: strlcpy.c,v 1.16 2019/01/25 00:19:25 millert Exp $    */
 
 /*
- * Copyright (c) 1998, 2015 Todd C. Miller <Todd.Miller@courtesan.com>
+ * Copyright (c) 1998, 2015 Todd C. Miller <millert@openbsd.org>
  * Copyright (c) 2022 Jeffrey H. Johnson <trnsz@pobox.com>
  *
  * Permission to use, copy, modify, and distribute this software for any
@@ -28,24 +28,34 @@
 size_t
 openbsd_strlcpy(char *dst, const char *src, size_t dsize)
 {
-        const char *osrc = src;
-        size_t nleft = dsize;
+  const char *osrc = src;
+  size_t nleft = dsize;
 
-        /* Copy as many bytes as will fit. */
-        if (nleft != 0) {
-                while (--nleft != 0) {
-                        if ((*dst++ = *src++) == '\0')
-                                break;
-                }
+  /* Copy as many bytes as will fit. */
+  if (nleft != 0)
+    {
+      while (--nleft != 0)
+        {
+          if (( *dst++ = *src++ ) == '\0')
+            {
+              break;
+            }
+        }
+    }
+
+  /* Not enough room in dst, add NUL and traverse rest of src. */
+  if (nleft == 0)
+    {
+      if (dsize != 0)
+        {
+          *dst = '\0'; /* NUL-terminate dst */
         }
 
-        /* Not enough room in dst, add NUL and traverse rest of src. */
-        if (nleft == 0) {
-                if (dsize != 0)
-                        *dst = '\0';            /* NUL-terminate dst */
-                while (*src++)
-                        ;
+      while (*src++)
+        {
+          ;
         }
+    }
 
-        return(src - osrc - 1); /* count does not include NUL */
+  return src - osrc - 1; /* count does not include NUL */
 }
