@@ -1,4 +1,5 @@
-OpenVi 7.0.10 -> OpenVi 7.0.11-dev (Unreleased): Sat Feb 12 11:33:59 2022
+OpenVi 7.0.10 -> OpenVi 7.0.11-dev (Unreleased): Sat Feb 12 11:38:39 2022
+        + Update bundled OpenBSD strlcpy to 1.16 2019/01/25 00:19:25
         + Update bundled OpenBSD reallocarray to 1.3 2015/09/13 08:31:47
         + Update bundled OpenBSD getopt_long to 1.32 2020/05/27 22:25:09
         + Update bundled OpenBSD basename to 1.17 2020/10/20 19:30:14
